--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "@smallwei/avue": "^2.7.4",
     "axios": "0.18.0",
     "element-ui": "2.4.6",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "qs": "latest",
     "vue": "2.5.17",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1",
-    "qs": "latest"
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "8.5.0",
